2007-01-09  Naba Kumar  <naba@gnome.org>

	* plugins/project-manager/plugin.c,
	plugins/project-manager/plugin.h,
	plugins/project-manager/anjuta-project-manager.ui,
	plugins/profile-default/plugin.c,
	plugins/profile-default/plugin.h,
	plugins/profile-default/Makefile.am,
	(added) plugins/profile-default/anjuta-default-profile.ui,
	manuals/reference/libanjuta/tmpl/ianjuta-profile.sgml,
	libanjuta/interfaces/libanjuta.idl: Reverted back incomplete
	multiple projects support.
	
2007-01-06  Armin Burgmeier  <armin@arbur.net>

	Reviewed by Naba Kumar  <naba@gnome.org>
	* plugins/class-gen/combo-flags.h:
	* plugins/class-gen/combo-flags.c: Added CgComboFlagsSelectionType
	enum, added a type parameter to selected signal. Select highlighted
	entry when pressing enter (but not unselect it if it was already
	selected) before closing the popup. Also accept input when clicking
	not into the popup.

	* plugins/class-gen/cell-renderer-flags.c: Do appropriate action
	according to selection type.

	* libanjuta/anjuta-marshal.list: Changed VOID:BOXED marshaller to
	VOID:BOXED,ENUM.

2007-01-08  Johannes Schmid <jhs@gnome.org>

  * plugins/project-wizard/templates/gtkmm/configure.in.tpl
  * plugins/project-wizard/templates/gtkmm/Makefile.am
  * plugins/project-wizard/templates/python/configure.ac.tpl
  * plugins/project-wizard/templates/python/configure.in.tpl
  * plugins/project-wizard/templates/python/Makefile.am
  * plugins/project-wizard/templates/cpp/configure.ac.tpl
  * plugins/project-wizard/templates/cpp/configure.in.tpl
  * plugins/project-wizard/templates/cpp/Makefile.am
  * plugins/project-wizard/templates/terminal.wiz
  * plugins/project-wizard/templates/xlib-dock.wiz
  * plugins/project-wizard/templates/wxwin.wiz
  * plugins/project-wizard/templates/java.wiz
  * plugins/project-wizard/templates/xlib/configure.ac.tpl
  * plugins/project-wizard/templates/xlib/configure.in.tpl
  * plugins/project-wizard/templates/xlib/Makefile.am